--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -12,7 +12,6 @@
       <h3>Titles:</h3>
       <ul>
         <%Title.all.each do |title|%>
-        <%=binding.pry%>
       </li><input type="checkbox" name="figure[title_ids][]" value="<%=title.id%>" id="<%="title_#{title.id}"%>"><%=title.name%></input></li>
         <%end%>
       </ul>
@@ -25,12 +24,12 @@
       <label>Create a new title:</label>
       <br></br>
       <label>Title:</label>
-        <input  type="text" name="title[name]" id="title_name"></input>
+        <input  type="text" name="title[name]" id="new_title"></input>
       <br></br>
       <label>Create a new landmark:</label>
       <br></br>
       <label>Landmark:</label>
-        <input  type="text" name="landmark[name]" id="landmark_name"></input>
+        <input  type="text" name="landmark[name]" id="new_landmark"></input>
       <br></br>
         <input type="submit" value="Create New Figure">
     </form>
