--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -7,7 +7,7 @@
  <body>
     <h1>Update a Figure</h1>
 
-    <form action="/figures" method="POST">
+    <form action="/figures/<%=@figure.id%>" method="POST">
         <label>Figure Name:</label>
         <br></br>
         <input type="text" name="figure[name]" id="figure_name" value="<%=@figure.name%>">
