--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -6,5 +6,17 @@
  </head>
  <body>
 	<h1>Figure: <%=@figure.name%></h1>
+  <h4>Titles:</h4>
+	<ul>
+	  <%@figure.titles.each do |title|%>
+	  <li><%=title.name%></li>
+	  <%end%>
+	</ul>
+  <h4>Landmarks:</h4>
+  <ul>
+	  <%@figure.landmarks.each do |landmark|%>
+	  <li><%=landmark.name%></li>
+	  <%end%>
+	</ul>
  </body>
 </html>
