--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -10,8 +10,7 @@
   <% if @landmarks.size > 0%>
     <ul>
       <% @landmarks.each do |landmark| %>
-         <li><a href="/landmarks/<%=landmark.id%>"><%=landmark.name%></a></li>
-         <li><a href="/landmarks/<%=landmark.id%>"><%=landmark.year_completed%></a></li>
+         <li><a href="/landmarks/<%=landmark.id%>"><%=landmark.name%></a> <%=landmark.year_completed%></li>
       <% end %>
     </ul>
   <%else%>
