--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -31,8 +31,8 @@
       </ul>
       <label>Or create a new landmark:</label>
       <br></br>
-      <label>Landmark:</label>
-        <input  type="text" name="landmark[name]" id="new_landmark"></input>
+        Landmark: <input  type="text" name="landmark[name]" id="new_landmark"></input>
+        Year Completed: <input  type="text" id="landmark_year_completed" name="landmark[year_completed]">
       <br></br>
         <input type="submit" value="Edit Figure">
     </form>
