--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -28,8 +28,8 @@
       <br></br>
       <label>Create a new landmark:</label>
       <br></br>
-      <label>Landmark:</label>
-        <input  type="text" name="landmark[name]" id="new_landmark"></input>
+        Landmark: <input  type="text" name="landmark[name]" id="new_landmark"></input>
+        Year Completed: <input  type="text" id="landmark_year_completed" name="landmark[year_completed]">
       <br></br>
         <input type="submit" value="Create New Figure">
     </form>
